[package]
name = "language"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.3.0"
pest_derive = "2.3.0"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git" }
anyhow = "1.0.63"
clap = "3.2.20"
structopt = "0.3.26"
env_logger = "0.9.0"
log = "0.4.17"
relative-path = "1.7.2"
assert_cmd = "2.0.4"
predicates = "2.1.1"

[build-dependencies]
protobuf-codegen = { git = "https://github.com/stepancheg/rust-protobuf.git" }
