[package]
name = "language"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
protobuf = "3.7.2"
anyhow = "1.0.98"
clap = "4.5.38"
structopt = "0.3.26"
env_logger = "0.11.8"
log = "0.4.27"
relative-path = "2.0.1"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[build-dependencies]
protobuf-codegen = "3.7.2"
